...
            "state": "translated",
            "value": "Escolher foto de perfil"
          }
        }
      }
    },
    "Choose your Scoor name": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Wähle deinen Scoor-Namen"
...
            "state": "translated",
            "value": "Os fins de semana têm média cerca de 10 pontos maior"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
